# sunat_rree_demo

./: README.md  app.py  insights_engine.py  kpi_monthly.parquet  kpi_prod_monthly.parquet  main.py  pyproject.toml  requirements.txt  run_pipeline.py  trade.duckdb  trade.parquet  trade_prod.parquet
data/: cdro_G1.xlsx
observatorio/: README.md  eda.py  etl.py  etl_products.py  metrics.py  metrics_products.py  trade.duckdb
observatorio/data/: cdro_F1.xlsx  cdro_G6.xlsx
observatorio/models/: metrics.sql
reports/eda/: eda_summary.md
tests/: test_insights.py  test_products_qa.py
