[project]
name = "sunat-rree-demo"
version = "0.1.0"
description = "Observatorio de Comercio Perú - ETL para datos de importaciones y exportaciones"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "duckdb>=0.8.0",
    "openpyxl>=3.1.0",
    "rich>=13.0.0",
    "pyarrow>=15.0.0",
    "plotly>=5.15.0",
    "streamlit>=1.28.0",
    "numpy>=1.24.0",
    "statsmodels>=0.14.0",
    "pytest>=8.4.1",
]
